# popdgp

./: .gitignore  CONTRIBUTING.md  PROGRESS.md  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
src/popdgp/: __init__.py  floors.py  metrics.py  views.py
tests/: test_floors.py  test_metrics.py  test_parity.py  test_views.py
