[project]
name = "popdgp"
version = "0.1.0"
description = "The population data-generating process, as a referee: an eval-only harness that scores any candidate synthetic population against the surveys that observe it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PolicyEngine" }]
keywords = [
    "synthetic-data",
    "survey-weights",
    "evaluation",
    "energy-distance",
    "microsimulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2",
    "pandas>=2.3",
    "scipy>=1.13",
    # The classifier two-sample test runs in the base metric surface, so
    # scikit-learn is a core dependency rather than an extra.
    "scikit-learn>=1.5",
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/popdgp"
Repository = "https://github.com/PolicyEngine/popdgp"
Issues = "https://github.com/PolicyEngine/popdgp/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["popdgp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/popdgp"]
